@@ -1,3 +1,9 @@
+2017-07-26  Richard Biener  <rguenther@suse.de>
+
+	* gcc/testsuite/gcc.dg/pr70920-2.c: Adjust for transform already
+	happening in ccp1.
+	* gcc/testsuite/gcc.dg/pr70920-4.c: Likewise.
+
 2017-07-26  Wilco Dijkstra  <wdijkstr@arm.com>
 
 	PR middle-end/46932
